@@ -5,7 +5,6 @@ require "logstash/logging"
 require "logstash/util/password"
 require "logstash/version"
 require "i18n"
-require "pathname"
 
 # This module is meant as a mixin to classes wishing to be configurable from
 # config files
