@@ -4,7 +4,13 @@ if $DEBUGLIST.include?("require")
 
     def require(path)
       result = require_debug(path)
-      puts "require(\"#{path}\") => #{result} (from: #{caller[1]})"
+      origin = caller[1]
+      if origin =~ /rubygems\/custom_require/
+        origin = caller[3]
+      end
+      puts "require(\"#{path}\")" if result
+      #puts "require(\"#{path}\") => #{result} (from: #{origin})"
+      #puts caller.map { |c| " => #{c}" }.join("\n")
     end
 
     alias_method :load_debug, :load
